tests/fixtures/compile_errors/numeric_capacity_mismatch/octal_number.fe
contract Foo:
    pub def test() -> u8:
        return u8(001)
